--- a/tic-tac-toe/client/main.css
+++ b/tic-tac-toe/client/main.css
@@ -1,4 +1,13 @@
 body {
-  padding: 10px;
+  padding: 0;
   font-family: sans-serif;
+}
+
+.slot img {
+  width: 100%;
+  height: 100%;
+}
+
+.page {
+  padding: 10px;
 }
